@@ -10,6 +10,7 @@
 - use more standard way of differentiating between different kinds of
   entries in the list (translated, fuzzy, new) by using font variants
   instead of different background colors (fixes #1863332)
+- use --omit-header argument to xgettext (fixes #1900222)
 
 
 Version 1.3.9
